--- a/src/app/gifs/components/gifs-card/gifs-card.component.html
+++ b/src/app/gifs/components/gifs-card/gifs-card.component.html
@@ -1,9 +1,15 @@
-<div class="card mb-2 text-center bg-dark">
-    <img 
+<div class="card mb-2 text-center bg-dark text-center">
+    <!--
+        <img 
     [src]="gif.images.downsized_medium.url" 
     [alt]="gif.title"
     class="card-img-top">
-    <div class="card-body text-white">
+    -->
+    <shared-lazy-image 
+    [url]="gif.images.downsized_medium.url" 
+    [alt]="gif.title || 'No title'" 
+    />
+    <div *ngIf="gif.title " class="card-body text-white">
         <p class="card-text"> {{gif.title}}</p>
     </div>
 </div>
