delay to lazy img loader

--- a/src/app/shared/components/lazy-image/lazy-image.component.html
+++ b/src/app/shared/components/lazy-image/lazy-image.component.html
@@ -4,7 +4,7 @@
     [alt]="alt"
     (load)="onLoad()"
     [ngStyle]="{display: hasLoaded ? '': 'none'}"
-    class="card-img-top"
+    class="card-img-top animate__animated animate__fadeIn"
     > 
     <img *ngIf="!hasLoaded"
     src="assets/svg/loading.svg" 
