readme and styles

--- a/src/app/gifs/components/gifs-card/gifs-card.component.html
+++ b/src/app/gifs/components/gifs-card/gifs-card.component.html
@@ -4,6 +4,6 @@
     [alt]="gif.title || 'No title'" 
     />
     <div *ngIf="gif.title " class="card-body text-white">
-        <p class="card-text"> {{gif.title}}</p>
+        <p class="card-subtitle mb-2"> {{gif.title}}</p>
     </div>
 </div>
